Update meta tags for better SEO

--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyCoverPhotos</title>
+    <!-- Primary Meta Tags -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>MyCoverPhotos - Create Stunning Social Media Covers</title>
+<meta name="description" content="Easily design and generate personalized social media cover images. Choose a template, customize colors, and download high-quality covers for LinkedIn, Twitter, and more.">
+<meta name="keywords" content="social media cover, LinkedIn banner, Twitter header, Facebook cover, design tool, cover image generator">
+<meta name="author" content="MyCoverPhotos">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph Meta Tags (For Social Media Sharing) -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="MyCoverPhotos - Create Stunning Social Media Covers">
+<meta property="og:description" content="Generate and customize high-quality social media cover images effortlessly. Perfect for LinkedIn, Twitter, and Facebook.">
+<meta property="og:image" content="https://mycoverphotos.vercel.app/default.jpg">
+<meta property="og:url" content="https://mycoverphotos.vercel.app/">
+<meta property="og:site_name" content="MyCoverPhotos">
+
+<!-- Twitter Card (For Better Twitter Sharing) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="MyCoverPhotos - Create Stunning Social Media Covers">
+<meta name="twitter:description" content="Easily design personalized social media cover images for LinkedIn, Twitter, and more.">
+<meta name="twitter:image" content="https://mycoverphotos.vercel.app/default.jpg">
+<meta name="twitter:site" content="@IamKingOry">
+
+<!-- Favicon (Replace with your actual favicon paths) -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+<!-- Canonical URL (Avoid duplicate content issues) -->
+<link rel="canonical" href="https://mycoverphotos.vercel.app/">
+
+<!-- Schema.org Markup (Optional for Rich Snippets) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "MyCoverPhotos",
+  "url": "https://mycoverphotos.vercel.app/",
+  "description": "Create professional and stylish social media cover images for free.",
+  "image": "https://mycoverphotos.vercel.app/default.jpg",
+  "creator": {
+    "@type": "Person",
+    "name": "Austin King'ori"
+  }
+}
+</script>
+
   </head>
   <body>
     <div id="root"></div>
