--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 }
 </script>
 
+<meta name="google-site-verification" content="iEhV0gfAjEyYimU1uE1ymzOWQOpQdfnpfNeqa9VHCYM" />
   </head>
   <body>
     <div id="root"></div>
